--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
    <header>
-      <a href="index.html"><img src="images/Capture.png" alt="ABE's Lawn Care" /></a>
+      <a href="index.html"><img src="images/capture.png" alt="ABE's Lawn Care" /></a>
       <nav>
          <ul>
             <li><a href="index.html">Home</a></li>
