--- a/specials.html
+++ b/specials.html
@@ -38,7 +38,7 @@
       <p>Is this your first time with us? Well, do we have a bargain for you! The first time you choose us to mow your lawn, you will get 1/2 off our regular pricing!* And for every 10th consecutive time after the first initial mowing will be 1/2 off!* So what are you waiting for?! Click on the "Contact Us" tab to figure out how to get you lawn mowed today!!  </p>
 	  <p><strong>*Deals will only be eligible through the end of Summer 2023</strong> </p>
    </article>
-   <img src="images/50%off.png" alt="image of panini on a plate" class="center" />
+   <img src="images/50%off.png" alt="50%sticker" class="center" />
 
    <footer>
    </footer>
