--- a/services.html
+++ b/services.html
@@ -25,8 +25,8 @@
       <nav>
          <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Specials</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="specials.html">Specials</a></li>
             <li><a href="#">Contact Us</a></li>
          </ul>
       </nav>
