--- a/index.html
+++ b/index.html
@@ -21,19 +21,22 @@
 <body>
    <header>
       <a href="index.html"><img src="images/capture.png" alt="ABE's Lawn Care" /></a>
+	  <a href="index.html" class="contact"><img src="images/contact.png" alt="ABE's Lawn Care" class="leftimg" /></a>
       <nav>
          <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Specials</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="specials.html">Specials</a></li>
             <li><a href="#">Contact Us</a></li>
          </ul>
       </nav>
    </header>
    <article>
       <h1>About Us</h1>
-      <img src="images/mowing.PNG" alt="image of panini on a plate" />
+      <img src="images/mowing.png" alt="image of panini on a plate" />
       <p><strong>ABE's Lawn Care</strong> is owned and operated by ABE Lincoln. ABE's Lawn Care was started in 2001, and it has now grown into a flourishing company. ABE's Lawn Care prides ourselves on ensuring that your grass is cut to your liking at a fair and reasonable price. "Call today to get rid of your weeds before they get rid of your lawn!" We look forward to doing business with you!</p>
    </article>
+   <footer>
+   </footer>
 </body>
 </html>
