--- a/services.html
+++ b/services.html
@@ -27,14 +27,14 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="specials.html">Specials</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="contactus.html">Contact Us</a></li>
          </ul>
       </nav>
    </header>
    <article>
       <h1>Services</h1>
       
-</table>
+
       <p><strong>ABE's Lawn Care</strong> offers different services to best help you keep your lawn looking amazing! Do you have those pesky weeds that keep popping up around your yard? CALL US!! We have top-of-the-line weed killers, to help you get rid of those pesky weeds! Do you have a lawn that you aren't able to keep up with? CALL US!! We have all sorts of mowers that we can use to help you keep your lawn looking amazing! Do you have grass growing around those hard-to-reach spaces? CALL US!! We have weed eaters and edgers to help get to those hard-to-reach spaces!! </p>
    </article>
    
@@ -78,6 +78,12 @@
 <p> This video below shows one of our amazing employees, John, working on mowing a small lawn for one of our customers.</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/OPlPdwQsnjw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="center"></iframe>
    <footer>
+   <p>ABE’S Lawn Care<br />
+12345 Caramel Av. &bull; Caramel town, NE 67890<br />
+<a href = "https://facebook.com" target="_blank">Facebook</a> |
+<a href = "https://twitter.com" target="_blank">Twitter</a> |
+<a href = "tel:+789-453-1298">(789)-453-1298</a>  |
+<a href = "mailto:ABEsLawnCare@gmail.com"> ABEsLawnCare@gmail.com</a></p>
    </footer>
 </body>
 </html>
