--- a/contactus.html
+++ b/contactus.html
@@ -32,20 +32,37 @@
       </nav>
    </header>
    <article>
-      <h1>Services</h1>
+      <h1>Contact Us</h1>
       
-</table>
-      <p>Is this your first time with us? Well, do we have a bargain for you! The first time you choose us to mow your lawn, you will get 1/2 off our regular pricing!* And for every 10th consecutive time after the first initial mowing will be 1/2 off!* So what are you waiting for?! Click on the "Contact Us" tab to figure out how to get you lawn mowed today!!  </p>
-	  <p><strong>*Deals will only be eligible through the end of Summer 2023</strong> </p>
+
+<p>Email:<a href = "mailtoABEsLawnCare@gmail.com"> ABEsLawnCare@gmail.com​</a><br>
+Office Phone #:<a href = "tel:+789-453-1298"> 789-453-1298​</a><br>
+Want to come see us in person?​<br>
+12345 Caramel Ave.​<br>
+Caramel town, NE 67890​<br>
+Thank you for considering doing business with us!!​<br>
+"Call today to get rid of your weeds before they get rid of your lawn!"  </p>
+<p><strong>Questions? Please fill out the form below and we will get back to you!!</strong> </p>
    </article>
-   <img src="images/50off.png" alt="50sticker" class="center" />
+   
+   <form>
+  <label for="fname">First name:</label><br>
+  <input type="text" id="fname" name="fname"><br>
+  <label for="lname">Last name:</label><br>
+  <input type="text" id="lname" name="lname"><br>
+  <label for="email">Email:</label><br>
+  <input type="text" id="Email" name="Email"><br>
+  <label for="Question(s)">Question(s):</label><br>
+  <input type="text" id="Question(s)" name="Question"><br>
+  <input type="submit">
+</form>
 
    <footer>
    <p>ABE’S Lawn Care<br />
-12345 Caramel Av. &bull; Caramel town, NE 67890<br />
+12345 Caramel Avenue &bull; Caramel town, NE 67890<br />
 <a href = "https://facebook.com" target="_blank">Facebook</a> |
 <a href = "https://twitter.com" target="_blank">Twitter</a> |
-<a href = "tel:+789-453-1298">(789)-453-1298</a>  |
+<a href = "tel:+789-453-1298">(789)-453-1298</a> |
 <a href = "mailto:ABEsLawnCare@gmail.com"> ABEsLawnCare@gmail.com</a></p>
    </footer>
 </body>
