--- a/index.html
+++ b/index.html
@@ -20,23 +20,29 @@
 
 <body>
    <header>
-      <a href="index.html"><img src="images/capture.png" alt="ABE's Lawn Care" /></a>
-	  <a href="index.html" class="contact"><img src="images/contact.png" alt="ABE's Lawn Care" class="leftimg" /></a>
+      <a href="index.html"><img src="images/capture.png" alt="ABE's phone number" /></a>
+	  <a href="index.html" class="contact"><img src="images/contact.png" alt="ABE's logo" class="leftimg" /></a>
       <nav>
          <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="specials.html">Specials</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="contactus.html">Contact Us</a></li>
          </ul>
       </nav>
    </header>
    <article>
       <h1>About Us</h1>
-      <img src="images/mowing.png" alt="image of panini on a plate" />
+      <img src="images/mowing.png" alt="mowing image" />
       <p><strong>ABE's Lawn Care</strong> is owned and operated by ABE Lincoln. ABE's Lawn Care was started in 2001, and it has now grown into a flourishing company. ABE's Lawn Care prides ourselves on ensuring that your grass is cut to your liking at a fair and reasonable price. "Call today to get rid of your weeds before they get rid of your lawn!" We look forward to doing business with you!</p>
    </article>
    <footer>
+   <p>ABE’S Lawn Care<br />
+12345 Caramel Av,. &bull; Caramel town, NE 67890<br />
+<a href = "https://facebook.com" target="_blank">Facebook</a> |
+<a href = "https://twitter.com" target="_blank">Twitter</a> |
+<a href = "tel:+789-453-1298">(789)-453-1298</a>  |
+<a href = "mailto:ABEsLawnCare@gmail.com"> ABEsLawnCare@gmail.com</a></p>
    </footer>
 </body>
 </html>
