--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
    </article>
    <footer>
    <p>ABE’S Lawn Care<br />
-12345 Caramel Av,. &bull; Caramel town, NE 67890<br />
+12345 Caramel Avenue &bull; Caramel town, NE 67890<br />
 <a href = "https://facebook.com" target="_blank">Facebook</a> |
 <a href = "https://twitter.com" target="_blank">Twitter</a> |
 <a href = "tel:+789-453-1298">(789)-453-1298</a>  |
