--- a/contactus.html
+++ b/contactus.html
@@ -36,7 +36,7 @@
       
 
 <p>Email:<a href = "mailtoABEsLawnCare@gmail.com"> ABEsLawnCare@gmail.com​</a><br>
-Office Phone #:<a href = "tel:+789-453-1298"> 789-453-1298​</a><br>
+Office Phone #:<a href = "tel:+7894531298"> 789-453-1298​</a><br>
 Want to come see us in person?​<br>
 12345 Caramel Ave.​<br>
 Caramel town, NE 67890​<br>
@@ -50,7 +50,7 @@ Thank you for considering doing business with us!!​<br>
   <input type="text" id="fname" name="fname"><br>
   <label for="lname">Last name:</label><br>
   <input type="text" id="lname" name="lname"><br>
-  <label for="email">Email:</label><br>
+  <label for="Email">Email:</label><br>
   <input type="text" id="Email" name="Email"><br>
   <label for="Question(s)">Question(s):</label><br>
   <input type="text" id="Question(s)" name="Question"><br>
@@ -62,7 +62,7 @@ Thank you for considering doing business with us!!​<br>
 12345 Caramel Avenue &bull; Caramel town, NE 67890<br />
 <a href = "https://facebook.com" target="_blank">Facebook</a> |
 <a href = "https://twitter.com" target="_blank">Twitter</a> |
-<a href = "tel:+789-453-1298">(789)-453-1298</a> |
+<a href = "tel:+7894531298">(789)-453-1298</a> |
 <a href = "mailto:ABEsLawnCare@gmail.com"> ABEsLawnCare@gmail.com</a></p>
    </footer>
 </body>
