--- a/services.html
+++ b/services.html
@@ -82,7 +82,7 @@
 12345 Caramel Avenue &bull; Caramel town, NE 67890<br />
 <a href = "https://facebook.com" target="_blank">Facebook</a> |
 <a href = "https://twitter.com" target="_blank">Twitter</a> |
-<a href = "tel:+789-453-1298">(789)-453-1298</a>  |
+<a href = "tel:+7894531298">(789)-453-1298</a>  |
 <a href = "mailto:ABEsLawnCare@gmail.com"> ABEsLawnCare@gmail.com</a></p>
    </footer>
 </body>
