--- a/specials.html
+++ b/specials.html
@@ -32,7 +32,7 @@
       </nav>
    </header>
    <article>
-      <h1>Services</h1>
+      <h1>Specials</h1>
       
 </table>
       <p>Is this your first time with us? Well, do we have a bargain for you! The first time you choose us to mow your lawn, you will get 1/2 off our regular pricing!* And for every 10th consecutive time after the first initial mowing will be 1/2 off!* So what are you waiting for?! Click on the "Contact Us" tab to figure out how to get you lawn mowed today!!  </p>
@@ -45,7 +45,7 @@
 12345 Caramel Avenue &bull; Caramel town, NE 67890<br />
 <a href = "https://facebook.com" target="_blank">Facebook</a> |
 <a href = "https://twitter.com" target="_blank">Twitter</a> |
-<a href = "tel:+789-453-1298">(789)-453-1298</a>  |
+<a href = "tel:+7894531298">(789)-453-1298</a>  |
 <a href = "mailto:ABEsLawnCare@gmail.com"> ABEsLawnCare@gmail.com</a></p>
    </footer>
 </body>
